# playdate_spelunky

./: .gitignore  LICENSE  meson.build  sprites
include/: context.h  data.h  entity.h  fastRandom.h  font.h  game.h  map.h  matrix.h  menu.h  polygon.h  renderer.h  sprites.h  stdtypes.h  tests.h  util.h  vector.h
playdate/: CMakeLists.txt  Makefile
playdate/src/: main.c  pattern.h
src/: context.c  data.c  entity.c  fastRandom.c  font.c  game.c  main.c  map.c  matrix.c  menu.c  polygon.c  renderer.c  sprites.c  srcEntityGen.c  srcLevelGen.c  srcRoomGen1.c  tests.c  util.c  vector.c
src/blocks/: pushBlock.c
src/characters/: bat.c  player.c  player_.c  snake.c  spider.c
src/characters/player/: characterStepEvent.c
src/items/: whip.c
